--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@headlessui/react": "^1.3.0",
     "@heroicons/react": "^1.0.3",
+    "@react-icons/all-files": "^4.1.0",
     "emailjs-com": "^3.2.0",
     "gatsby": "^3.10.2",
     "gatsby-plugin-image": "^1.10.1",
